Name:			        mb
Version:        	0.0.1
Cabal-Version:  	>= 1.9.2
License:          AllRightsReserved
Build-type:       Simple
Author:         	Johannes Waldmann, Eric Noeth, Alexander Bau
Maintainer:       Johannes Waldmann, Eric Noeth, Alexander Bau

Executable mb
  Main-Is:          MB.hs
  Ghc-options:        -W -O2 -fno-warn-incomplete-patterns -threaded -rtsopts
  Build-Depends:      base >= 4.2 && < 5.0
                    , containers == 0.5.*
                    , pretty == 1.1.*
                    , tpdb >= 0.7.0
                    , HaXml
                    , satchmo == 2.6.*
                    , satchmo-smt == 0.3.*
                    , mtl == 2.*
                    , array
                    , transformer-combinators
                    , hmatrix-glpk
                    , ghc-prim
                    , hashable                    

Executable statistik
  Main-Is:          Statistik.hs
  Ghc-options:        -W -fno-warn-incomplete-patterns
  Build-Depends:      base >= 4.2 && < 5.0
                    , containers == 0.5.*
                    , directory == 1.*
                    , tpdb >= 0.7.0
                    , hashable

Executable paper
  Main-Is:          Compress/Paper/Main.hs
  Ghc-options:        -W -fno-warn-incomplete-patterns
  Build-Depends:      base >= 4.2 && < 5.0
                    , containers == 0.5.*
                    , tpdb >= 0.7.0
                    , hashable
                    , mtl == 2.*
                    , ghc-prim
                    , hashable
